[gd_scene load_steps=21 format=2]

[ext_resource path="res://Entities/Enemies/Gnomes/RevolverGnome/RevolverGnome.png" type="Texture" id=1]
[ext_resource path="res://Entities/Enemies/Gnomes/RevolverGnome/GunGnome.gd" type="Script" id=2]
[ext_resource path="res://Managing/Colliders/PlayerDetection.tscn" type="PackedScene" id=3]
[ext_resource path="res://Managing/Colliders/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Entities/DamageManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://Entities/Enemies/Assets/HealthBarFull.png" type="Texture" id=6]
[ext_resource path="res://Entities/Enemies/Assets/HealthBarEmpty.png" type="Texture" id=7]
[ext_resource path="res://Managing/MoneyDropper.gd" type="Script" id=8]
[ext_resource path="res://Entities/Enemies/Gnomes/RevolverGnome/Revolver.png" type="Texture" id=9]
[ext_resource path="res://Entities/Enemies/Gnomes/RevolverGnome/Revolver.gd" type="Script" id=10]
[ext_resource path="res://Entities/Effects/Blood/Blood.tscn" type="PackedScene" id=11]
[ext_resource path="res://Entities/Enemies/Gnomes/RevolverGnome/RevolverGnomeCorpse.png" type="Texture" id=12]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float isOn = 1.0;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	vec4 flash = vec4(
		mix(color.r, 1, isOn),
		mix(color.g, 1, isOn),
		mix(color.b, 1, isOn),
		color.a
	);
	COLOR = flash;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/isOn = 0.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6.5, 3 )

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="CircleShape2D" id=5]
radius = 160.012

[sub_resource type="Animation" id=6]
resource_name = "Idle"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Walk"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}

[node name="GunGnome" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 49
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( -1, 2 )
texture = ExtResource( 1 )
offset = Vector2( 1, -11 )
flip_h = true
hframes = 3
vframes = 2

[node name="Gun" type="Node2D" parent="."]
show_behind_parent = true
position = Vector2( 0, -6 )
script = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="Gun"]
show_behind_parent = true
position = Vector2( 7, -1 )
texture = ExtResource( 9 )

[node name="Timer" type="Timer" parent="Gun"]
wait_time = 3.0
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -3 )
shape = SubResource( 3 )

[node name="DamageManager" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, -6 )
maxHealth = 40
kbAmount = 500.0
upwardsKB = 64.0
corpseSprites = [ ExtResource( 12 ) ]
spritePath = NodePath("../Sprite")
deathParticles = ExtResource( 11 )

[node name="MoneyDropper" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="Collisions" type="Node2D" parent="."]

[node name="Hurtbox" parent="Collisions" instance=ExtResource( 4 )]
visible = false
position = Vector2( 0, -8 )
collision_layer = 4

[node name="CollisionShape2D" parent="Collisions/Hurtbox" index="0"]
shape = SubResource( 4 )

[node name="PlayerDetection" parent="Collisions" instance=ExtResource( 3 )]
visible = false
mustBeInSight = false

[node name="CollisionShape2D" parent="Collisions/PlayerDetection" index="0"]
shape = SubResource( 5 )

[node name="CollisionChecker" type="RayCast2D" parent="Collisions"]
visible = false
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 17

[node name="FloorChecker" type="RayCast2D" parent="Collisions"]
visible = false
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 17

[node name="Timers" type="Node" parent="."]

[node name="StateChange" type="Timer" parent="Timers"]
one_shot = true
autostart = true

[node name="Jump" type="Timer" parent="Timers"]
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 6 )
anims/RESET = SubResource( 7 )
anims/Walk = SubResource( 8 )

[node name="Healthbar" type="TextureProgress" parent="."]
margin_left = -9.0
margin_top = -30.0
margin_right = 9.0
margin_bottom = -25.0
max_value = 50.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 6 )

[connection signal="timeout" from="Gun/Timer" to="Gun" method="shoot"]
[connection signal="dead" from="DamageManager" to="MoneyDropper" method="drop_money"]
[connection signal="hurt" from="Collisions/Hurtbox" to="DamageManager" method="take_damage"]
[connection signal="timeout" from="Timers/StateChange" to="." method="_on_state_change_timeout"]
[connection signal="timeout" from="Timers/Jump" to="." method="jump"]

[editable path="Collisions/Hurtbox"]
[editable path="Collisions/PlayerDetection"]
